--- a/ReactAndWebPack/package.json
+++ b/ReactAndWebPack/package.json
@@ -4,7 +4,7 @@
   "description": "projeto criado para fins educacionais",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Caio M. Dias",
@@ -15,7 +15,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.16.0",
+    "eslint-config-defaults": "^9.0.0",
+    "react-hot-loader": "^3.1.3",
     "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1",
     "webpack-server": "^0.1.2"
   },
   "dependencies": {
